created the parent component and linked the Github component template to the main app component's template

--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-12">
         <h1>GitHub Search</h1>
         <h2>Search the GitHub Repository</h2>
-        <p>You can search the GitHub using a valid username and see names as well as descriptions of the persons repository. Just input the person's username into the search area and click on 'Search'</p>
+        <p>You can search the GitHub using a valid username and see names as well as descriptions of the person's repository. Just input the person's username into the search area and click on 'Search'. You can also search repositories using repository names.</p>
       </div>
     </div>
   </div>
