created a form for capturing a username when a user searches using username

--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -1,3 +1,13 @@
-<p>
-  github-form works!
-</p>
+<div class="container-fluid">
+  <div class="jumbotron-fluid">
+    <div class="row">
+      <h2>Search By Username</h2>
+      <form>
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" class="form-control" id="username" placeholder="Search by Username">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
