added the form for capturing a repository name for users who want to search for repositories

--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -9,5 +9,14 @@
         </div>
       </form>
     </div>
+    <div class="row">
+      <h2>Search By Repository Name</h2>
+      <form>
+        <div class="form-group">
+          <label for="repository"></label>
+          <input type="text" class="form-control" id="repository" placeholder="Search by Repository Name">
+        </div>
+      </form>
+    </div>
   </div>
 </div>
