applied input property binding by linking the parent component to the child github form component

--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -9,3 +9,10 @@
     </div>
   </div>
 </div>
+<div class="container-fluid">
+  <div class="row">
+    <ul>
+      <app-github-form></app-github-form>
+    </ul>
+  </div>
+</div>
