--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -6,6 +6,7 @@
         <div class="form-group">
           <label for="username">Username</label>
           <input type="text" class="form-control" id="username" placeholder="Search by Username">
+          <button type="submit" class="btn btn-default">Search</button>
         </div>
       </form>
     </div>
@@ -15,6 +16,7 @@
         <div class="form-group">
           <label for="repository"></label>
           <input type="text" class="form-control" id="repository" placeholder="Search by Repository Name">
+          <button type="submit" class="btn btn-default">Search</button>
         </div>
       </form>
     </div>
