--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -1,20 +1,21 @@
 <div class="container-fluid">
   <div class="jumbotron-fluid">
-    <div class="row">
-      <h2>Search By Username</h2>
+    <div class="row" id="form-username">
+      <div class="col-md-12" id="search-username">
       <form>
         <div class="form-group">
-          <label for="username">Username</label>
+          <label for="username">Search By Username</label>
           <input type="text" class="form-control" id="username" placeholder="Search by Username">
           <button type="submit" class="btn btn-default">Search</button>
         </div>
       </form>
+      </div>
     </div>
-    <div class="row">
-      <h2>Search By Repository Name</h2>
+    <div class="row" id="form-repository">
+      <div class="col-md-12" id="search-repository">
       <form>
         <div class="form-group">
-          <label for="repository"></label>
+          <label for="repository">Search By Repository Name</label>
           <input type="text" class="form-control" id="repository" placeholder="Search by Repository Name">
           <button type="submit" class="btn btn-default">Search</button>
         </div>
