--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+li {
+  list-style: none;
+}
+
+button {
+  display: block;
+  margin: 0.5rem 0;
+}
