added my profile details to the samsoluoch child component and linked it to the Github child component

--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -12,6 +12,7 @@
 <div class="container-fluid">
   <div class="row">
     <ul>
+      <app-samsoluoch></app-samsoluoch>
       <app-github-form></app-github-form>
     </ul>
   </div>
