--- a/src/app/samsoluoch/samsoluoch.component.html
+++ b/src/app/samsoluoch/samsoluoch.component.html
@@ -1,3 +1,11 @@
-<p>
-  samsoluoch works!
-</p>
+<div class="container">
+  <div class="jumbotron">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Sam Oluoch</h2>
+        <h4>GitHub Username:</h4>
+        <h4>GitHub Repositories</h4>
+      </div>
+    </div>
+  </div>
+</div>
