added styles to the forms component and personal profile component as well as templates

--- a/src/app/github-form/github-form.component.css
+++ b/src/app/github-form/github-form.component.css
@@ -1,4 +1,6 @@
-/* #form-repository {
-  align-content: left;
-  align-items: left;
-} */
+#jumbo-form {
+  background-color: rgb(163, 116, 53)
+}
+#form-label {
+  color: white;
+}
