--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
-  <div class="jumbotron-fluid">
+  <div class="jumbotron" id="jumbo-form">
     <div class="row" id="form-username">
       <div class="col-md-12" id="search-username">
       <form>
         <div class="form-group">
-          <label for="username">Search By Username</label>
+          <label for="username" id="form-label">Search By Username</label>
           <input type="text" class="form-control" id="username" placeholder="Search by Username">
           <button type="submit" class="btn btn-default">Search</button>
         </div>
@@ -15,11 +15,12 @@
       <div class="col-md-12" id="search-repository">
       <form>
         <div class="form-group">
-          <label for="repository">Search By Repository Name</label>
+          <label for="repository" id="form-label">Search By Repository Name</label>
           <input type="text" class="form-control" id="repository" placeholder="Search by Repository Name">
           <button type="submit" class="btn btn-default">Search</button>
         </div>
       </form>
+      </div>
     </div>
   </div>
 </div>
