--- a/src/app/samsoluoch/samsoluoch.component.html
+++ b/src/app/samsoluoch/samsoluoch.component.html
@@ -1,10 +1,11 @@
 <div class="container">
-  <div class="jumbotron">
+  <div class="jumbotron" id="samsoluoch">
     <div class="row">
       <div class="col-md-8">
         <h2>Sam Oluoch</h2>
-        <h4>GitHub Username:</h4>
-        <h4>GitHub Repositories</h4>
+        <h6>GitHub Username:</h6>
+        <h6>GitHub Repositories</h6>
+        <h6>Photo</h6>
       </div>
     </div>
   </div>
