--- a/src/app/github-form/github-form.component.html
+++ b/src/app/github-form/github-form.component.html
@@ -6,7 +6,7 @@
         <div class="form-group">
           <label for="username" id="form-label">Search By Username</label>
           <input type="text" class="form-control" id="username" placeholder="Search by Username">
-          <button type="submit" class="btn btn-default">Search</button>
+          <button type="submit" class="btn btn-default">Search User</button>
         </div>
       </form>
       </div>
@@ -17,7 +17,7 @@
         <div class="form-group">
           <label for="repository" id="form-label">Search By Repository Name</label>
           <input type="text" class="form-control" id="repository" placeholder="Search by Repository Name">
-          <button type="submit" class="btn btn-default">Search</button>
+          <button type="submit" class="btn btn-default">Search Repository</button>
         </div>
       </form>
       </div>
