--- a/src/app/github/github.component.css
+++ b/src/app/github/github.component.css
@@ -1,3 +1,9 @@
 #title {
   text-align: center;
+  background-color: #494606;
+  color: white;
+  width: 50%;
+  background-repeat: no-repeat;
+  align-content: center;
+  height: 350px;
 }
