--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
-  <div class="jumbotron">
+  <div class="jumbotron" id="title">
     <div class="row">
-      <div class="col-md-6" id="title">
+      <div class="col-md-6">
         <h1>GitHub Search</h1>
         <h4>Search the GitHub Repository</h4>
         <p>You can search the GitHub using a valid username and see names as well as descriptions of the person's repository. Just input the person's username into the search area and click on 'Search'. You can also search repositories using repository names.</p>
