created users child component that will handle user's details. Added styles to it and linked it to the parent component

--- a/src/app/github/github.component.css
+++ b/src/app/github/github.component.css
@@ -7,3 +7,9 @@
   align-content: center;
   height: 350px;
 }
+#users {
+  background-color: rgb(163, 116, 53);
+  color: white;
+  width: 22%;
+  text-align: left;
+}
