--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -17,3 +17,18 @@
     </ul>
   </div>
 </div>
+<div class="container-fluid">
+  <div class="jumbotron" id="users">
+    <div class="row">
+      <div class="col-md-6">
+        <h4>Your Search Results</h4>
+        <ul>
+          <div *ngFor='let user of users'>
+            <li >{{user.name}}</li>
+            <app-users></app-users>
+          </div>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
