imported class Github and class Samsoluoch into the main component. Also created an array of Samsoluoch profile and repository names

--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -21,7 +21,7 @@
   <div class="jumbotron" id="users">
     <div class="row">
       <div class="col-md-6">
-        <h4>Your Search Results</h4>
+        <h4>Search Results</h4>
         <ul>
           <div *ngFor='let user of users'>
             <li >{{user.name}}</li>
