--- a/src/app/users/users.html
+++ b/src/app/users/users.html
@@ -2,7 +2,7 @@
   <div class="jumbotron">
     <div class="row">
       <ul>
-        <div *ngFor='let goal of goals'>
+        <div *ngFor='let user of users'>
           <li >{{user.name}}</li>
         </div>
       </ul>
