--- a/src/app/samsoluoch/samsoluoch.component.html
+++ b/src/app/samsoluoch/samsoluoch.component.html
@@ -3,8 +3,11 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Sam Oluoch</h2>
-        <h6>GitHub Username:</h6>
+        <h6>GitHub Username: <strong>samsoluoch</strong></h6>
         <h6>GitHub Repositories</h6>
+        <ul><strong>
+          <li *ngFor='let Samsoluoch of Samsoluochs' id="hubname">{{Samsoluoch.repositories}}</li></strong>
+        </ul>
         <h6>Photo</h6>
       </div>
     </div>
