added content to the child component that displays user's profiles. Then linked the template of the child component to the parent component

--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -14,6 +14,7 @@
     <ul>
       <app-samsoluoch></app-samsoluoch>
       <app-github-form></app-github-form>
+      <app-users></app-users>
     </ul>
   </div>
 </div>
