--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,9 @@
-<p>
-  users works!
-</p>
+<div class="container">
+  <div class="jumbotron" id="gitProfiles">
+    <div class="row">
+      <div class="col-md-12">
+        <h4>List of GitHub Profiles</h4>
+      </div>
+    </div>
+  </div>
+</div>
