created object instances in the users class and imported and exported the users class to the users component. Created an array for users that holds usernames and id only

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -2,7 +2,8 @@
   <div class="jumbotron" id="gitProfiles">
     <div class="row">
       <div class="col-md-12">
-        <h4>List of GitHub Profiles</h4>
+        <h4>Some GitHub Usernames</h4>
+        <!-- <li *ngFor='let User of Users' id="hubname">{{User.username}}</li></strong> -->
       </div>
     </div>
   </div>
