added an array of users to the component users. Added a showDetails to the class users that will toggle and show more details on the profiles.

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,7 +3,9 @@
     <div class="row">
       <div class="col-md-12">
         <h4>Some GitHub Usernames</h4>
-        <!-- <li *ngFor='let User of Users' id="hubname">{{User.username}}</li></strong> -->
+        <ul>
+        <li *ngFor='let Users of User' id="hubname">{{Users.username}}</li>
+        </ul>
       </div>
     </div>
   </div>
