added the toggle button to the users component and called the toggleDetails function. Created the toggleDetails function in the users component

--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -24,8 +24,9 @@
       <div class="col-md-6">
         <h4>Search Results</h4>
         <ul>
-          <div *ngFor='let user of users'>
+          <div *ngFor='let user of users; let i = index'>
             <li >{{user.name}}</li>
+
             <app-users></app-users>
           </div>
         </ul>
