fetched the samsoluoch github profile from github using API key

--- a/src/app/samsoluoch/samsoluoch.component.html
+++ b/src/app/samsoluoch/samsoluoch.component.html
@@ -4,11 +4,10 @@
       <div class="col-md-12">
         <h2>Sam Oluoch</h2>
         <h6>GitHub Username: <strong>samsoluoch</strong></h6>
-        <h6>GitHub Repositories</h6>
-        <ul><strong>
-          <li *ngFor='let Samsoluoch of Samsoluochs' id="hubname">{{Samsoluoch.repositories}}</li></strong>
-        </ul>
-        <h6>Photo</h6>
+        <!-- <h6>GitHub Repositories</h6> -->
+        <img src="{{samsoluoch.profile}}" alt="">
+<footer><cite>{{samsoluoch.login}}</cite></footer>
+        <!-- <h6>Photo</h6> -->
       </div>
     </div>
   </div>
