--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -25,7 +25,7 @@
         <h4>Search Results</h4>
         <ul>
           <div *ngFor='let user of users; let i = index'>
-            <li >{{user.name}}</li>
+            <li >{{users.profile}}</li>
 
             <app-users></app-users>
           </div>
