--- a/src/app/samsoluoch/samsoluoch.component.html
+++ b/src/app/samsoluoch/samsoluoch.component.html
@@ -3,11 +3,12 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Sam Oluoch</h2>
-        <h6>GitHub Username: <strong>samsoluoch</strong></h6>
-        <!-- <h6>GitHub Repositories</h6> -->
+        <h5><strong>GitHub Profile</strong></h5>
         <img src="{{samsoluoch.profile}}" alt="">
-<footer><cite>{{samsoluoch.login}}</cite></footer>
-        <!-- <h6>Photo</h6> -->
+<footer><cite>GitHub Username: {{samsoluoch.login}}</cite></footer>
+<footer><cite>Public Repositories: {{samsoluoch.public_repos}}</cite></footer>
+<footer><cite>Public Repositories: {{samsoluoch.repos_url}}</cite></footer>
+
       </div>
     </div>
   </div>
