fetched the link to github profile and displayed it on the profile

--- a/src/app/samsoluoch/samsoluoch.component.html
+++ b/src/app/samsoluoch/samsoluoch.component.html
@@ -7,7 +7,7 @@
         <img src="{{samsoluoch.profile}}" alt="">
 <footer><cite>GitHub Username: {{samsoluoch.login}}</cite></footer>
 <footer><cite>Public Repositories: {{samsoluoch.public_repos}}</cite></footer>
-<footer><cite>Public Repositories: {{samsoluoch.repos_url}}</cite></footer>
+<footer><cite>Link to Profile: {{samsoluoch.html_url}}</cite></footer>
 
       </div>
     </div>
