added a custom pipe to the profiles, which displays the last date an updated was made to a profile

--- a/src/app/samsoluoch/samsoluoch.component.html
+++ b/src/app/samsoluoch/samsoluoch.component.html
@@ -3,12 +3,12 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Sam Oluoch</h2>
-        <h5><strong>GitHub Profile</strong></h5>
+        <h3><strong>GitHub Profile</strong></h3>
+        <h4><footer><cite><strong>Profile Last Updated On:</strong> {{samsoluoch.updated_at|date}}</cite></footer></h4>
         <img src="{{samsoluoch.profile}}" alt="">
-<footer><cite>GitHub Username: {{samsoluoch.login}}</cite></footer>
-<footer><cite>Public Repositories: {{samsoluoch.public_repos}}</cite></footer>
-<footer><cite>Link to Profile: {{samsoluoch.html_url}}</cite></footer>
-
+        <h4><footer><cite><strong>GitHub Username:</strong> {{samsoluoch.login}}</cite></footer></h4>
+        <h4><footer><cite><strong>Public Repositories:</strong> {{samsoluoch.public_repos}}</cite></footer></h4>
+        <h4><footer><cite><strong>Link to Profile:</strong> {{samsoluoch.html_url}}</cite></footer></h4>
       </div>
     </div>
   </div>
