updated the custom time counter pipe

--- a/src/app/samsoluoch/samsoluoch.component.html
+++ b/src/app/samsoluoch/samsoluoch.component.html
@@ -9,6 +9,8 @@
         <h4><footer><cite><strong>GitHub Username:</strong> {{samsoluoch.login}}</cite></footer></h4>
         <h4><footer><cite><strong>Public Repositories:</strong> {{samsoluoch.public_repos}}</cite></footer></h4>
         <h4><footer><cite><strong>Link to Profile:</strong> {{samsoluoch.html_url}}</cite></footer></h4>
+        <p>{{samsoluoch.updated_at}}</p>
+        <p>This profile will be updated again in {{samsoluoch.updated_at|dateCount}} days</p>
       </div>
     </div>
   </div>
