added the routing module to create a nav bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,24 @@
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Github Search</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a routerLink='/github' routerLinkActive='active'>Github Search</a></li>
+        <li><a routerLink='/samsoluoch' routerLinkActive='active'>Sam Oluoch Profile</a></li>
+        <li><a routerLink='/users' routerLinkActive='active'>Users</a></li>
+        <li><a routerLink='/github-form' routerLinkActive='active'>Search Repositories and Usernames</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<router-outlet></router-outlet>
+
 <app-github></app-github>
